# eigen-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run
include/: kernel.hpp  test.hpp
src/: kernel.cpp  kernel.cu  test.cpp
